[package]
name = "plotmux"
version = "0.1.0"
edition = "2021"

[features]
default = ["plotmuxui"]
plotmuxui = []

[lib]
path = "src/lib.rs"

[[bin]]
name = "plotmuxui"
path = "src/bin/plotmuxui.rs"
required-features = ["plotmuxui"]

[dependencies]
crossbeam-channel = "0.5.12"
defer = "0.2.1"
sha1 = "0.10.1"
eframe = "0.22"
egui_extras = { version = "0.22", features = ["image"] }
lazy_static = "1.4.0"
serde = { version = "1.0.198", features = ["derive"] }
serde_bytes = "0.11.14"
bincode = "1.3.3"
image = { version = "0.25.1", features = ["jpeg", "png"] }
clap = { version = "4.5.4", features = ["derive"] }
snap = "1.1.1"
tinyfiledialogs = "3.9.1"
derivative = "2.2.0"
